# oxideterm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LEGAL.md  LICENSE  NOTICE  PLUGIN_DEVELOPMENT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  package.json  plugin-api.d.ts  pnpm-lock.yaml
agent/: Cargo.toml  THIRD_PARTY_NOTICES.md  deny.toml
agent/src/: fs_ops.rs  main.rs  protocol.rs
crates/oxideterm-ai/: Cargo.toml
crates/oxideterm-ai/src/: acp.rs  chat.rs  context_sanitizer.rs  context_window.rs  key_store.rs  lib.rs  mcp.rs  orchestrator.rs  persistence.rs  policy.rs  profiles.rs  provider_embeddings.rs  references.rs  settings.rs  slash.rs  suggestions.rs  tests.rs  tool_protocol.rs  tool_result_protocol.rs  types.rs
crates/oxideterm-ai/src/mcp/: helpers.rs  process.rs  registry_connect.rs  registry_protocol.rs  registry_public.rs  tests.rs  types.rs
crates/oxideterm-ai/src/providers/: catalog.rs  discovery.rs  discovery_http.rs  discovery_models.rs  mod.rs  selector.rs
crates/oxideterm-ai/src/rag/: bm25.rs  (+6 more)
crates/oxideterm-app-lock/: Cargo.toml
crates/oxideterm-app-lock/src/: biometric.rs  lib.rs
crates/oxideterm-cli/: Cargo.toml
crates/oxideterm-cli/src/: args.rs  backup.rs  batch.rs  cloud_sync.rs  cloud_sync_preview.rs  cloud_sync_secrets.rs  cloud_sync_state.rs  cloud_sync_write.rs  completion.rs  connections.rs  connections_validate.rs  diagnose.rs  doctor.rs  error.rs  json_query.rs  main.rs  output.rs  oxide.rs  paths.rs  portable.rs  report.rs  secrets.rs  settings.rs  ssh.rs  write_guard.rs
crates/oxideterm-cloud-sync/: Cargo.toml
crates/oxideterm-cloud-sync/src/: backend.rs  lib.rs  operation.rs  plugin_settings.rs  progress.rs  secrets.rs  service.rs  state.rs  state_transitions.rs
crates/oxideterm-code-editor/: Cargo.toml
crates/oxideterm-code-editor/src/: lib.rs
crates/oxideterm-connections/: Cargo.toml
crates/oxideterm-connections/src/: connection_import.rs  draft.rs  keychain.rs  lib.rs  secret.rs  ssh_config.rs  ssh_keys.rs  ssh_paths.rs  store.rs  touch_id.rs
crates/oxideterm-desktop-presence/: Cargo.toml
crates/oxideterm-desktop-presence/src/: config.rs  event.rs  lib.rs
crates/oxideterm-editor-syntax/: Cargo.toml
crates/oxideterm-editor-syntax/src/: brackets.rs  edit.rs  error.rs  folding.rs  highlight.rs  indent.rs  language.rs  lib.rs  queries.rs  session.rs  tests.rs  types.rs
crates/oxideterm-forwarding/: Cargo.toml
crates/oxideterm-forwarding/src/: bridge.rs  detection.rs  dynamic.rs  error.rs  events.rs  lib.rs  local.rs  manager.rs  registry.rs  remote.rs  saved.rs  x11.rs
crates/oxideterm-forwarding/tests/: ssh_forwarding_e2e.rs
crates/oxideterm-gpui-app/: Cargo.toml
crates/oxideterm-gpui-app/resources/: OxideTerm.entitlements
crates/oxideterm-gpui-app/src/: app_icon.rs  assets.rs  bundled_fonts.rs  keybindings.rs  logging.rs  main.rs  platform.rs  single_instance.rs  workspace.rs
crates/oxideterm-gpui-cloud-sync/: Cargo.toml
crates/oxideterm-gpui-cloud-sync/src/: config.rs  delivery.rs  form.rs  format.rs  guide.rs  labels.rs  lib.rs  preview.rs  selection.rs  signatures.rs  state_finish.rs  status.rs  view.rs  view_state.rs
crates/oxideterm-gpui-editor/: Cargo.toml
crates/oxideterm-gpui-editor/src/: lib.rs  metrics.rs  settings.rs  surface.rs  viewport.rs
crates/oxideterm-gpui-ide/: Cargo.toml
crates/oxideterm-gpui-ide/src/: file_icons.rs  labels.rs  lib.rs  surface.rs
crates/oxideterm-gpui-markdown/: Cargo.toml
crates/oxideterm-gpui-markdown/src/: highlight.rs  layout.rs  lib.rs  math.rs  model.rs  options.rs  parser.rs  render.rs  style.rs
crates/oxideterm-gpui-platform/: Cargo.toml
crates/oxideterm-gpui-platform/src/: autostart.rs  lib.rs  rendering.rs  vibrancy.rs  window_opacity.rs
crates/oxideterm-gpui-remote-desktop/: Cargo.toml
crates/oxideterm-gpui-remote-desktop/src/: input.rs  lib.rs  state.rs  view.rs
crates/oxideterm-gpui-settings-view/: Cargo.toml
crates/oxideterm-gpui-settings-view/src/: ai.rs  appearance.rs  highlight.rs  labels.rs  lib.rs  options.rs  types.rs
crates/oxideterm-gpui-terminal/: Cargo.toml
crates/oxideterm-gpui-terminal/src/: app.rs  app_command_marks.rs  app_modem.rs  app_recording.rs  app_trzsz.rs  background_cache.rs  command_facts.rs  lib.rs  modem_worker.rs  privilege_prompt.rs  terminal_ui.rs  terminal_view.rs  trzsz_worker.rs  trzsz_worker_upload.rs
crates/oxideterm-ide-fs/: Cargo.toml
crates/oxideterm-ide-fs/src/: agent.rs  lib.rs  local.rs  node_sftp.rs
crates/oxideterm-local-files/: Cargo.toml
crates/oxideterm-local-files/src/: archive.rs  bookmarks.rs  checksum.rs  drives.rs  lib.rs  listing.rs  model.rs  operations.rs  paths.rs  preview.rs
crates/oxideterm-native/: Cargo.toml
crates/oxideterm-native/src/: assets.rs  main.rs  platform.rs  ui.rs  workspace.rs
crates/oxideterm-plugin-host-api/: Cargo.toml
crates/oxideterm-plugin-host-api/src/: ai.rs  app.rs  backend.rs  capabilities.rs  catalog.rs  forwarding.rs  host_tools.rs  ide.rs  lib.rs  profiler.rs  readonly.rs  runtime.rs  secrets.rs  settings.rs  sftp.rs  sync.rs  terminal.rs  transfers.rs
crates/oxideterm-plugin-registry/: Cargo.toml
crates/oxideterm-plugin-registry/src/: constants.rs  contributions.rs  discovery.rs  install.rs  lib.rs  paths.rs  permissions.rs  registry.rs  state_semantics.rs  tests.rs  validation.rs
crates/oxideterm-plugin-runtime-install/: Cargo.toml
crates/oxideterm-plugin-runtime-install/src/: archive.rs  compatibility.rs  http.rs  lib.rs  release.rs  target.rs
crates/oxideterm-portable-runtime/: Cargo.toml
crates/oxideterm-portable-runtime/src/: detection.rs  keystore.rs  lib.rs  lock.rs  status.rs
crates/oxideterm-preview/: Cargo.toml
crates/oxideterm-preview/src/: asset.rs  audio.rs  lib.rs  pdf.rs  renderer.rs  session.rs  text.rs  types.rs  video.rs
crates/oxideterm-secret-store/: Cargo.toml
crates/oxideterm-secret-store/src/: lib.rs  macos.rs  macos_auth.rs
crates/oxideterm-session-adapter/: Cargo.toml
crates/oxideterm-session-adapter/src/: auth.rs  lib.rs  ssh.rs  tests.rs
(+1930 files in other folders)
