[workspace]
members = [
  "crates/oxideterm-gpui-terminal",
  "crates/oxideterm-i18n",
  "crates/oxideterm-native",
  "crates/oxideterm-terminal",
  "crates/oxideterm-theme",
  "crates/oxideterm-workspace",
  "crates/russh",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0"
crossbeam-channel = "0.5"
gpui = "=0.2.2"
libc = "0.2"
parking_lot = "0.12"
serde_json = "1.0"
tracing = "0.1"
