[workspace]
members = [
  "crates/oxideterm-gpui-markdown",
  "crates/oxideterm-gpui-platform",
  "crates/oxideterm-gpui-settings-view",
  "crates/oxideterm-gpui-terminal",
  "crates/oxideterm-gpui-ui",
  "crates/oxideterm-plugin-host-api",
  "crates/oxideterm-plugin-manifest",
  "crates/oxideterm-plugin-protocol",
  "crates/oxideterm-plugin-registry",
  "crates/oxideterm-ai",
  "crates/oxideterm-code-editor",
  "crates/oxideterm-editor-core",
  "crates/oxideterm-editor-syntax",
  "crates/oxideterm-gpui-editor",
  "crates/oxideterm-gpui-ide",
  "crates/oxideterm-connections",
  "crates/oxideterm-connection-monitor",
  "crates/oxideterm-notification-center",
  "crates/oxideterm-topology",
  "crates/oxideterm-backend-classification",
  "crates/oxideterm-cloud-sync",
  "crates/oxideterm-ide-core",
  "crates/oxideterm-ide-fs",
  "crates/oxideterm-forwarding",
  "crates/oxideterm-preview",
  "crates/oxideterm-i18n",
  "crates/oxideterm-launcher",
  "crates/oxideterm-local-files",
  "crates/oxideterm-wsl-graphics",
  "crates/oxideterm-gpui-app",
  "crates/oxideterm-render-policy",
  "crates/oxideterm-settings",
  "crates/oxideterm-settings-model",
  "crates/oxideterm-sftp",
  "crates/oxideterm-ssh",
  "crates/oxideterm-terminal",
  "crates/oxideterm-terminal-recording",
  "crates/oxideterm-terminal-encoding",
  "crates/oxideterm-terminal-graphics",
  "crates/oxideterm-terminal-unicode",
  "crates/oxideterm-theme",
  "crates/oxideterm-trzsz",
  "crates/oxideterm-webview",
  "crates/oxideterm-workspace",
  "crates/russh",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1.0"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = "6.1"
dirs = "6"
encoding_rs = "0.8"
futures-util = "0.3"
gpui = "=0.2.2"
gpui-component = { version = "=0.5.1", default-features = false }
icy_sixel = "0.5.0"
image = "0.25.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2"
memmap2 = "0.9"
parking_lot = "0.12"
polling = "3.11"
raw-window-handle = "0.6"
regex = "1.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signature = "2"
ssh-encoding = "0.2"
subtle = "2.5"
sysinfo = { version = "0.33", default-features = false, features = ["disk", "system"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "fs", "process", "macros"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1.0"
tree-sitter-containerfile = "0.8.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-fish = "3.6.0"
tree-sitter-go = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-lua = "0.5.0"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.3"
tree-sitter-objc = "3.0.2"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-python = "0.23.6"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-zsh = "0.63.4"
tree-sitter-zig = "1.1.2"
ts-parser-perl = "1.0.2"
unicode-bidi = "0.3"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
uuid = { version = "1.23", features = ["v4", "serde"] }
windows = "0.61"
whoami = "1.6"
wry = { package = "lb-wry", version = "0.53.3" }
zeroize = { version = "1.8", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
incremental = true
split-debuginfo = "unpacked"
