[workspace]
members = [
  "crates/oxideterm-atomic-file",
  "crates/oxideterm-app-lock",
  "crates/oxideterm-gpui-markdown",
  "crates/oxideterm-cli",
  "crates/oxideterm-rdp-helper",
  "crates/oxideterm-gpui-cloud-sync",
  "crates/oxideterm-gpui-remote-desktop",
  "crates/oxideterm-gpui-platform",
  "crates/oxideterm-gpui-settings-view",
  "crates/oxideterm-gpui-terminal",
  "crates/oxideterm-gpui-ui",
  "crates/oxideterm-environment",
  "crates/oxideterm-plugin-host-api",
  "crates/oxideterm-plugin-manifest",
  "crates/oxideterm-plugin-protocol",
  "crates/oxideterm-plugin-registry",
  "crates/oxideterm-plugin-runtime-install",
  "crates/oxideterm-plugin-wasm-runtime",
  "crates/oxideterm-ai",
  "crates/oxideterm-acp-adapter",
  "crates/oxideterm-acp-host-tools",
  "crates/oxideterm-editor-core",
  "crates/oxideterm-editor-syntax",
  "crates/oxideterm-gpui-editor",
  "crates/oxideterm-gpui-ide",
  "crates/oxideterm-connections",
  "crates/oxideterm-desktop-presence",
  "crates/oxideterm-quick-commands",
  "crates/oxideterm-connection-monitor",
  "crates/oxideterm-notification-center",
  "crates/oxideterm-network-proxy",
  "crates/oxideterm-topology",
  "crates/oxideterm-backend-classification",
  "crates/oxideterm-cloud-sync",
  "crates/oxideterm-ide-core",
  "crates/oxideterm-ide-fs",
  "crates/oxideterm-forwarding",
  "crates/oxideterm-preview",
  "crates/oxideterm-portable-runtime",
  "crates/oxideterm-secret-store",
  "crates/oxideterm-update",
  "crates/oxideterm-i18n",
  "crates/oxideterm-launcher",
  "crates/oxideterm-local-files",
  "crates/oxideterm-modem-transfer",
  "crates/oxideterm-wsl-graphics",
  "crates/oxideterm-gpui-app",
  "crates/oxideterm-render-policy",
  "crates/oxideterm-remote-desktop",
  "crates/oxideterm-vnc-helper",
  "crates/oxideterm-settings",
  "crates/oxideterm-settings-model",
  "crates/oxideterm-session-adapter",
  "crates/oxideterm-sftp",
  "crates/oxideterm-ssh-launch",
  "crates/oxideterm-ssh",
  "crates/oxideterm-terminal",
  "crates/oxideterm-terminal-recording",
  "crates/oxideterm-terminal-encoding",
  "crates/oxideterm-terminal-graphics",
  "crates/oxideterm-terminal-model",
  "crates/oxideterm-terminal-unicode",
  "crates/oxideterm-theme",
  "crates/oxideterm-trzsz",
  "crates/oxideterm-workspace",
  "crates/oxideterm-x11-forwarding",
  "crates/gpui-ce/gpui",
  "crates/gpui-ce/gpui_ce_util",
  "crates/gpui-ce/gpui_collections",
  "crates/gpui-ce/gpui_derive_refineable",
  "crates/gpui-ce/gpui_linux",
  "crates/gpui-ce/gpui_macos",
  "crates/gpui-ce/gpui_macros",
  "crates/gpui-ce/gpui_media",
  "crates/gpui-ce/gpui_platform",
  "crates/gpui-ce/gpui_refineable",
  "crates/gpui-ce/gpui_scheduler",
  "crates/gpui-ce/gpui_shared_string",
  "crates/gpui-ce/gpui_sum_tree",
  "crates/gpui-ce/gpui_wgpu",
  "crates/gpui-ce/gpui_windows",
  "crates/gpui-ce/gpui_zed_util",
  "crates/russh",
  "crates/russh-sftp",
]
default-members = ["crates/oxideterm-gpui-app"]
resolver = "2"

[patch.crates-io]
gpui = { path = "crates/gpui-ce/gpui" }
russh = { path = "crates/russh" }
russh-sftp = { path = "crates/russh-sftp" }

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
publish = false
version = "2.0.11"

[workspace.dependencies]
accesskit = "0.24.0"
accesskit_macos = "0.26.0"
accesskit_unix = "0.22.0"
accesskit_windows = "0.32.1"
alacritty_terminal = "0.26.0"
agent-client-protocol = "=0.14.0"
anyhow = "1.0"
ashpd = { version = "0.13", default-features = false, features = ["async-io", "notification", "open_uri", "file_chooser", "settings", "trash"] }
async-channel = "2.5.0"
async-trait = "0.1"
async-process = "2.5"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
base64 = "0.22"
backtrace = "0.3"
bitflags = "2.6.0"
bytes = "1.11"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
crossbeam-channel = "0.5"
collections = { path = "crates/gpui-ce/gpui_collections", version = "0.2.2", package = "gpui_collections" }
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "1.0.6"
dashmap = "6.1"
derive_more = { version = "2.1.1", features = ["add", "add_assign", "deref", "deref_mut", "display", "from_str", "mul", "mul_assign", "not"] }
dirs = "5"
encoding_rs = "0.8"
env_logger = "0.11"
futures-util = "0.3"
futures = "0.3"
futures-concurrency = "7.7.1"
fs2 = "0.4"
gpui = { path = "crates/gpui-ce/gpui", version = "=0.2.2" }
gpui_linux = { path = "crates/gpui-ce/gpui_linux", version = "0.1.0" }
gpui_macos = { path = "crates/gpui-ce/gpui_macos", version = "0.1.0" }
gpui_macros = { path = "crates/gpui-ce/gpui_macros", version = "0.1.0" }
gpui_platform = { path = "crates/gpui-ce/gpui_platform", version = "0.1.0" }
gpui_shared_string = { path = "crates/gpui-ce/gpui_shared_string", version = "0.1.0" }
gpui_util = { path = "crates/gpui-ce/gpui_ce_util", version = "0.2.2", package = "gpui_ce_util" }
gpui_wgpu = { path = "crates/gpui-ce/gpui_wgpu", version = "0.1.0" }
gpui_windows = { path = "crates/gpui-ce/gpui_windows", version = "0.1.0" }
hdrhistogram = "7"
heck = "0.5"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
icy_sixel = "0.5.0"
image = "0.25.10"
inventory = "0.3.19"
itertools = "0.14.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
media = { path = "crates/gpui-ce/gpui_media", version = "0.2.2", package = "gpui_media" }
memmap2 = "0.9"
metal = "0.33"
minisign-verify = "0.2"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSGraphics"] }
parking_lot = "0.12"
polling = "3.11"
pollster = "0.4.0"
postage = { version = "0.5", features = ["futures-traits"] }
proc-macro2 = "1.0.93"
profiling = "1"
proptest = { version = "1.10", features = ["attr-macro"] }
quote = "1.0.9"
quick-xml = "0.39"
raw-window-handle = "0.6"
refineable = { path = "crates/gpui-ce/gpui_refineable", version = "0.2.2", package = "gpui_refineable" }
regex = "1.12"
rand = "0.8"
rand10 = { package = "rand", version = "0.10" }
# `system-proxy` lets the updater's explicit System proxy mode read OS proxy
# settings instead of only inheriting environment variables.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream", "system-proxy"] }
rmp-serde = "1"
scap = { version = "0.0.8-zed", package = "zed-scap", default-features = false }
scheduler = { path = "crates/gpui-ce/gpui_scheduler", version = "0.2.2", package = "gpui_scheduler" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
sha2 = "0.10"
signature = "3.0.0-rc.10"
serialport = "4"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
ssh-encoding = "=0.3.0-rc.9"
stacksafe = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
subtle = "2.5"
sum_tree = { path = "crates/gpui-ce/gpui_sum_tree", version = "0.2.2", package = "gpui_sum_tree" }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sysinfo = { version = "0.33", default-features = false, features = ["disk", "system"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "fs", "process", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.25.10"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1.0"
tree-sitter-containerfile = "0.8.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-fish = "3.6.0"
tree-sitter-go = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-lua = "0.5.0"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.3"
tree-sitter-objc = "3.0.2"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-python = "0.23.6"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-zsh = "0.63.4"
tree-sitter-zig = "1.1.2"
ts-parser-perl = "1.0.2"
unicode-bidi = "0.3"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
unicode-width = "0.2.2"
url = "2.2"
util = { path = "crates/gpui-ce/gpui_zed_util", version = "0.2.2", package = "gpui_zed_util" }
uuid = { version = "1.23", features = ["v4", "v5", "v7", "serde"] }
wasm-bindgen = "0.2.120"
wasmtime = { version = "46.0.1", default-features = false, features = ["cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p1"] }
windows = { version = "0.61", features = [
  "Foundation_Numerics",
  "Globalization_DateTimeFormatting",
  "Storage_Search",
  "Storage_Streams",
  "System_Threading",
  "UI_ViewManagement",
  "Wdk_System_SystemServices",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_DirectManipulation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Hlsl",
  "Win32_Media",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Performance",
  "Win32_System_Pipes",
  "Win32_System_RestartManager",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WinRT",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
web-time = "1.1.0"
wgpu = "29.0.3"
whoami = "1.6"
zeroize = { version = "1.8", features = ["serde"] }
zip = { version = "2.0", default-features = false, features = ["deflate", "time"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
incremental = true
split-debuginfo = "unpacked"
