[package]
name = "oxideterm-ai"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
keyring.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
whoami.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.23"
