[package]
name = "oxideterm-ai"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
instant-distance = { version = "0.6.1", features = ["with-serde"] }
keyring.workspace = true
eventsource-stream = "0.2.3"
futures-util.workspace = true
parking_lot.workspace = true
redb = "2.1"
regex.workspace = true
reqwest.workspace = true
rmp-serde = "1"
rust-stemmers = "1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
whoami.workspace = true
zeroize.workspace = true
zstd = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }

[dev-dependencies]
tempfile = "3.23"
