[package]
name = "oxideterm-app-lock"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
oxideterm-portable-runtime = { path = "../oxideterm-portable-runtime" }
oxideterm-secret-store = { path = "../oxideterm-secret-store" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
whoami.workspace = true
zeroize.workspace = true
