[package]
name = "oxideterm-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "oxideterm"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
oxideterm-ai = { path = "../oxideterm-ai" }
oxideterm-cloud-sync = { path = "../oxideterm-cloud-sync", default-features = false }
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-forwarding = { path = "../oxideterm-forwarding", default-features = false }
oxideterm-portable-runtime = { path = "../oxideterm-portable-runtime" }
oxideterm-quick-commands = { path = "../oxideterm-quick-commands" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-ssh-launch = { path = "../oxideterm-ssh-launch" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true
