[package]
name = "oxideterm-cloud-sync"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hmac = "0.12"
keyring.workspace = true
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-forwarding = { path = "../oxideterm-forwarding" }
oxideterm-settings = { path = "../oxideterm-settings" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
whoami.workspace = true
zeroize.workspace = true
