[package]
name = "oxideterm-cloud-sync"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["runtime"]
runtime = ["oxideterm-forwarding/runtime"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hmac = "0.12"
keyring.workspace = true
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-portable-runtime = { path = "../oxideterm-portable-runtime" }
oxideterm-forwarding = { path = "../oxideterm-forwarding", default-features = false }
oxideterm-quick-commands = { path = "../oxideterm-quick-commands" }
oxideterm-settings = { path = "../oxideterm-settings" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
whoami.workspace = true
zeroize.workspace = true
