[package]
name = "oxideterm-code-editor"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
syntax = ["gpui-component/tree-sitter-languages"]

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
oxideterm-theme = { path = "../oxideterm-theme" }
