[package]
name = "oxideterm-connections"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring.workspace = true
uuid.workspace = true
whoami.workspace = true
zeroize.workspace = true
