[package]
name = "oxideterm-connections"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
dirs.workspace = true
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring.workspace = true
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
oxideterm-portable-runtime = { path = "../oxideterm-portable-runtime" }
russh = { path = "../russh" }
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
whoami.workspace = true
zeroize.workspace = true
