[package]
name = "oxideterm-forwarding"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["runtime"]
runtime = [
  "dep:dashmap",
  "dep:oxideterm-backend-classification",
  "dep:oxideterm-ssh",
  "dep:oxideterm-x11-forwarding",
  "dep:tokio",
  "dep:tracing",
]

[dependencies]
chrono.workspace = true
dashmap = { workspace = true, optional = true }
oxideterm-backend-classification = { path = "../oxideterm-backend-classification", optional = true }
oxideterm-ssh = { path = "../oxideterm-ssh", optional = true }
oxideterm-x11-forwarding = { path = "../oxideterm-x11-forwarding", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
rand10.workspace = true
russh = { path = "../russh" }
serde_json.workspace = true
tempfile = "3.23"
