[package]
name = "oxideterm-gpui-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "oxideterm-native"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gpui.workspace = true
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-forwarding = { path = "../oxideterm-forwarding" }
oxideterm-gpui-platform = { path = "../oxideterm-gpui-platform" }
oxideterm-gpui-settings-view = { path = "../oxideterm-gpui-settings-view" }
oxideterm-gpui-terminal = { path = "../oxideterm-gpui-terminal" }
oxideterm-gpui-ui = { path = "../oxideterm-gpui-ui" }
oxideterm-i18n = { path = "../oxideterm-i18n" }
oxideterm-preview = { path = "../oxideterm-preview" }
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
oxideterm-terminal = { path = "../oxideterm-terminal" }
oxideterm-theme = { path = "../oxideterm-theme" }
oxideterm-workspace = { path = "../oxideterm-workspace" }
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-av-kit = "0.3.2"
objc2-foundation = "0.3.2"
raw-window-handle.workspace = true

[package.metadata.bundle]
identifier = "com.analysecircuit.OxideTerm"
name = "OxideTerm"
osx_minimum_system_version = "13.0"
osx_info_plist_exts = ["resources/info/*"]
osx_entitlements = "resources/OxideTerm.entitlements"
