[package]
name = "oxideterm-gpui-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "oxideterm-native"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gpui-component.workspace = true
gpui.workspace = true
oxideterm-backend-classification = { path = "../oxideterm-backend-classification" }
oxideterm-ai = { path = "../oxideterm-ai" }
oxideterm-connection-monitor = { path = "../oxideterm-connection-monitor" }
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-code-editor = { path = "../oxideterm-code-editor", features = ["syntax"] }
oxideterm-forwarding = { path = "../oxideterm-forwarding" }
oxideterm-gpui-ide = { path = "../oxideterm-gpui-ide" }
oxideterm-gpui-markdown = { path = "../oxideterm-gpui-markdown" }
oxideterm-gpui-platform = { path = "../oxideterm-gpui-platform" }
oxideterm-gpui-settings-view = { path = "../oxideterm-gpui-settings-view" }
oxideterm-gpui-terminal = { path = "../oxideterm-gpui-terminal" }
oxideterm-gpui-ui = { path = "../oxideterm-gpui-ui" }
oxideterm-i18n = { path = "../oxideterm-i18n" }
oxideterm-launcher = { path = "../oxideterm-launcher" }
oxideterm-local-files = { path = "../oxideterm-local-files" }
oxideterm-notification-center = { path = "../oxideterm-notification-center" }
oxideterm-preview = { path = "../oxideterm-preview", features = ["pdfium"] }
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
oxideterm-terminal = { path = "../oxideterm-terminal" }
oxideterm-terminal-recording = { path = "../oxideterm-terminal-recording" }
oxideterm-theme = { path = "../oxideterm-theme" }
oxideterm-topology = { path = "../oxideterm-topology" }
oxideterm-webview = { path = "../oxideterm-webview" }
oxideterm-workspace = { path = "../oxideterm-workspace" }
oxideterm-wsl-graphics = { path = "../oxideterm-wsl-graphics" }
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir = "2"
wry.workspace = true
zip = { version = "2.0", default-features = false, features = ["deflate", "time"] }
zeroize.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = "0.24.5"
gstreamer-video = "0.24.5"
raw-window-handle.workspace = true
x11-dl = "2.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-av-kit = "0.3.2"
objc2-foundation = "0.3.2"
raw-window-handle.workspace = true

[package.metadata.bundle]
identifier = "com.analysecircuit.OxideTerm"
name = "OxideTerm"
osx_minimum_system_version = "13.0"
osx_info_plist_exts = ["resources/info/*"]
osx_entitlements = "resources/OxideTerm.entitlements"
resources = ["resources/agents"]
