[package]
name = "oxideterm-gpui-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "oxideterm-native"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
gpui.workspace = true
image.workspace = true
oxideterm-backend-classification = { path = "../oxideterm-backend-classification" }
oxideterm-ai = { path = "../oxideterm-ai" }
oxideterm-acp-adapter = { path = "../oxideterm-acp-adapter" }
oxideterm-cloud-sync = { path = "../oxideterm-cloud-sync" }
oxideterm-connection-monitor = { path = "../oxideterm-connection-monitor" }
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-forwarding = { path = "../oxideterm-forwarding" }
oxideterm-gpui-cloud-sync = { path = "../oxideterm-gpui-cloud-sync" }
oxideterm-gpui-editor = { path = "../oxideterm-gpui-editor" }
oxideterm-gpui-ide = { path = "../oxideterm-gpui-ide" }
oxideterm-gpui-markdown = { path = "../oxideterm-gpui-markdown" }
oxideterm-gpui-platform = { path = "../oxideterm-gpui-platform" }
oxideterm-gpui-remote-desktop = { path = "../oxideterm-gpui-remote-desktop" }
oxideterm-gpui-settings-view = { path = "../oxideterm-gpui-settings-view" }
oxideterm-gpui-terminal = { path = "../oxideterm-gpui-terminal" }
oxideterm-gpui-ui = { path = "../oxideterm-gpui-ui" }
oxideterm-editor-syntax = { path = "../oxideterm-editor-syntax" }
oxideterm-environment = { path = "../oxideterm-environment" }
oxideterm-i18n = { path = "../oxideterm-i18n" }
oxideterm-ide-fs = { path = "../oxideterm-ide-fs" }
oxideterm-launcher = { path = "../oxideterm-launcher" }
oxideterm-local-files = { path = "../oxideterm-local-files" }
oxideterm-notification-center = { path = "../oxideterm-notification-center" }
oxideterm-plugin-host-api = { path = "../oxideterm-plugin-host-api" }
oxideterm-plugin-manifest = { path = "../oxideterm-plugin-manifest" }
oxideterm-plugin-protocol = { path = "../oxideterm-plugin-protocol" }
oxideterm-plugin-registry = { path = "../oxideterm-plugin-registry" }
oxideterm-portable-runtime = { path = "../oxideterm-portable-runtime" }
oxideterm-preview = { path = "../oxideterm-preview" }
oxideterm-quick-commands = { path = "../oxideterm-quick-commands" }
oxideterm-remote-desktop = { path = "../oxideterm-remote-desktop" }
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-settings-model = { path = "../oxideterm-settings-model" }
oxideterm-session-adapter = { path = "../oxideterm-session-adapter" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh-launch = { path = "../oxideterm-ssh-launch" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
oxideterm-terminal = { path = "../oxideterm-terminal" }
oxideterm-terminal-recording = { path = "../oxideterm-terminal-recording" }
oxideterm-theme = { path = "../oxideterm-theme" }
oxideterm-topology = { path = "../oxideterm-topology" }
oxideterm-update = { path = "../oxideterm-update" }
oxideterm-workspace = { path = "../oxideterm-workspace" }
oxideterm-wsl-graphics = { path = "../oxideterm-wsl-graphics" }
parking_lot.workspace = true
regex.workspace = true
redb = "2.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir = "2"
zip.workspace = true
zeroize.workspace = true

[build-dependencies]
embed-resource = "3.0.9"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle.workspace = true
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
windows-core.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = "0.24.5"
gstreamer-video = "0.24.5"
raw-window-handle.workspace = true
x11-dl = "2.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-av-foundation = "0.3.2"
objc2-av-kit = "0.3.2"
objc2-foundation = "0.3.2"
raw-window-handle.workspace = true

[package.metadata.bundle]
identifier = "com.analysecircuit.OxideTerm"
name = "OxideTerm"
icon = [
    "resources/icons/32x32.png",
    "resources/icons/64x64.png",
    "resources/icons/128x128.png",
    "resources/icons/128x128@2x.png",
    "resources/icons/icon.icns",
    "resources/icons/icon.ico",
]
osx_minimum_system_version = "13.0"
osx_info_plist_exts = ["resources/info/*"]
osx_entitlements = "resources/OxideTerm.entitlements"
resources = ["resources/agents", "resources/cli-bin", "resources/icons"]
